--- a/index.html
+++ b/index.html
@@ -84,23 +84,23 @@
                 <!-- Project Card 1 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
     <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
-            <div class="p-6">
-                <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
-                <p class="text-gray-700 mb-4">A summary of several technology-based projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
-                <div class="flex flex-wrap gap-2 mb-4">
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Linux</span>
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">SQL</span>
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">HTML</span>
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
-                        <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Cybersecurity</span>
-                    </div>
-                    <a href="https://raw.githubusercontent.com/justincavanaugh-code/portfoliotest1/main/Portfolio-tech-slides-2.pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
-                        View Project
-                    <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
-                        </a>
-                    </div>
-                </div>
+    <div class="p-6">
+        <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
+        <p class="text-gray-700 mb-4">A summary of several technology-based projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
+        <div class="flex flex-wrap gap-2 mb-4">
+            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
+            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Linux</span>
+            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">SQL</span>
+            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">HTML</span>
+            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
+            <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Cybersecurity</span>
+        </div>
+        <a href="https://github.com/justincavanaugh-code/portfoliotest1/blob/main/Portfolio-tech-slides-2.pdf" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+            View Project
+            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+        </a>
+    </div>
+</div>
 
                 <!-- Project Card 2 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
