--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm Justin and this will eventually serve as my professional portfolio. If you are reading this, please note this is also my initial test of writing my own code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site in a "minimum viable product" state, including some temporary placeholders.
+                        Hello! I'm Justin and this is my professional portfolio. This is also my initial attempts at writing my own HTML code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site with the intention to update and interate as needed.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related interests, including converting a personal laptop into a Linux OS...and creating this website from scratch!
+                        I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related interests, including completing AI certifications, converting a personal laptop into a Linux OS...and creating this website!
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed">
                         I have spent most of my career in Learning & Development and IT. I have a master's degree in Curriculum/Instructional Design, experience as a scrum master, LMS Adminstrator and SharePoint administrator. I enjoy producing and incorporating multimedia content, especially if it involves video editing.
@@ -86,7 +86,7 @@
     <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
-        <p class="text-gray-700 mb-4">A summary of several technology-based projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
+        <p class="text-gray-700 mb-4">This is a summary of several technology-based projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Python</span>
             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Linux</span>
@@ -107,7 +107,7 @@
     <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Project+2" alt="Project 2 Image" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">Software Simulations</h3>
-        <p class="text-gray-700 mb-4">This project consisted of a series software simulations I created using Storyline 360. My voiceover describes the context, including how we customized Storyline's innate "sim" functionality for this project.</p>
+        <p class="text-gray-700 mb-4">This project consisted of a series software simulations I created using Storyline 360. My voiceover describes the context, including how I customized Storyline's innate "sim" functionality for this project.</p>
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Storyline 360</span>
             <span class="bg-indigo-100 text-indigo-800 text-sm font-medium px-3 py-1 rounded-full">Articulate 360</span>
@@ -126,7 +126,7 @@
     <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">eLearning/LMS Content</h3>
-        <p class="text-gray-700 mb-4">An overview of several eLearning/LMS projects I published for a former employer, with an emphasis on multimedia creation. Content includes: training for Agile methodology, Office 365 and several technical/applicaton-specific courses. </p>
+        <p class="text-gray-700 mb-4">An overview of several eLearning/LMS projects I published for a former employer, with an emphasis on multimedia creation. Content includes: training for Agile methodology, Office 365 and several applicaton-specific courses.</p>
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">LMS</span>
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Video Editing</span>
