--- a/index.html
+++ b/index.html
@@ -62,13 +62,12 @@
                 </div>
                 <div class="md:w-2/3 text-left">
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        Hello! I'm Justin and this is my professional portfolio. This is also my initial attempt at writing my own HTML code and publishing a website from scratch. In the spirit of Agile (and since I am a "Z to A" learner), I am publishing this site with the intention to update and iterate as needed.
+                        Hello! I'm Justin and this is my professional portfolio. I have spent most of my career in Learning & Development and Information Technology. I have a master's degree in Curriculum & Instructional Design, an extensive background in Agile methodology, and experience as an LMS adminstrator. I enjoy producing and incorporating multimedia content, especially video editing.
                     </p>
                     <p class="text-lg text-gray-700 leading-relaxed mb-4">
-                        I recently completed Google's Cybersecurity Professional Certificate program. This experience helped inspire me to continue to explore several technology-related projects, including completing AI-related certifications, converting a personal laptop into a Linux OS...and creating this website!
-                    </p>
+                        I hold multiple AI-related certifications and recently completed Google's Cybersecurity Professional Certificate program. This inspired me to continue my research into areas beyond the program’s scope, including network architecture, virtualization, web development and server management. As a result, I recently created a home testing lab to continue my technology-related learning and research. 
                     <p class="text-lg text-gray-700 leading-relaxed">
-                        I have spent most of my career in Learning & Development and IT. I have a master's degree in Curriculum/Instructional Design, experience as a scrum master, LMS Adminstrator and SharePoint administrator. I enjoy producing and incorporating multimedia content, especially if it involves video editing.
+                        The Projects section below provides a sampling of my work in L&D, cybersecurity, AI and everything in betweeen. Thank you for visiting my portfolio!
                     </p>
                 </div>
             </div>
@@ -82,6 +81,25 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
 
                 <!-- Project Card 1 -->
+<div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
+                    <img src="https://placehold.co/400x250/3B82F6/FFFFFF?text=Home+Lab+Research" alt="Home Lab Research Image" class="w-full h-48 object-cover">
+                    <div class="p-6">
+                        <h3 class="text-2xl font-semibold text-gray-900 mb-3">Home Lab Research</h3>
+                        <p class="text-gray-700 mb-4">Created a home testing lab to continue my learning and research into concepts such as network architecture, virtualization, web development and server management.</p>
+                        <div class="flex flex-wrap gap-2 mb-4">
+                            <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">AI</span>
+                            <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">LEMP</span>
+                            <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Virtualization</span>
+                            <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Research</span>
+                        </div>
+                        <a href="ProjectsLab0.html" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+                            View Project
+                            <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
+                        </a>
+                    </div>
+                </div>
+
+                <!-- Project Card 2 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
     <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
     <div class="p-6">
@@ -102,7 +120,7 @@
     </div>
 </div>
 
-                <!-- Project Card 2 -->
+                <!-- Project Card 3 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
     <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Project+2" alt="Project 2 Image" class="w-full h-48 object-cover">
     <div class="p-6">
@@ -121,7 +139,7 @@
     </div>
 </div>
 
-                <!-- Project Card 3 -->
+                <!-- Project Card 4 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
     <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
     <div class="p-6">
