--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
                 <!-- Project Card 1 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-                    <img src="https://placehold.co/400x250/3B82F6/FFFFFF?text=Home+Lab+Research" alt="Home Lab Research Image" class="w-full h-48 object-cover">
+                    <img src="https://placehold.co/400x250/3B82F6/FFFFFF?text=Research" alt="Research" class="w-full h-48 object-cover">
                     <div class="p-6">
                         <h3 class="text-2xl font-semibold text-gray-900 mb-3">Home Lab Research</h3>
                         <p class="text-gray-700 mb-4">Created a home testing lab to continue my learning and research into concepts such as network architecture, virtualization, web development and server management.</p>
@@ -91,6 +91,7 @@
                             <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">LEMP</span>
                             <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Virtualization</span>
                             <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Research</span>
+                            <span class="bg-blue-100 text-blue-800 text-sm font-medium px-3 py-1 rounded-full">Server Management</span>
                         </div>
                         <a href="ProjectsLab0.html" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
                             View Project
@@ -101,7 +102,7 @@
 
                 <!-- Project Card 2 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-    <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Project+1" alt="Project 1 Image" class="w-full h-48 object-cover">
+    <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Cybersecurity" alt="Cybersecurity" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">AI and Cybersecurity-inspired projects</h3>
         <p class="text-gray-700 mb-4">This is a summary of several technology-based projects inspired by completing Google's AI and Cybersecurity Certification programs.</p>
@@ -122,7 +123,7 @@
 
                 <!-- Project Card 3 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-    <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Project+2" alt="Project 2 Image" class="w-full h-48 object-cover">
+    <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Sims" alt="Sims" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">Software Simulations</h3>
         <p class="text-gray-700 mb-4">This project consisted of a series software simulations I created using Storyline 360. My voiceover describes the context, including how I customized Storyline's innate "sim" functionality for this project.</p>
@@ -141,7 +142,7 @@
 
                 <!-- Project Card 4 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-    <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=Project+3" alt="Project 3 Image" class="w-full h-48 object-cover">
+    <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=LMS" alt="LMS" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">eLearning/LMS Content</h3>
         <p class="text-gray-700 mb-4">An overview of several eLearning/LMS projects I published for a former employer, with an emphasis on multimedia creation. Content includes: training for Agile methodology, Office 365 and several applicaton-specific courses.</p>
@@ -166,7 +167,7 @@
             I'm always open to new opportunities to learn and collaborate. Feel free to reach out!
         </p>
         <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
-            You can <a href="mailto:jandjcavanaugh@gmail.com" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">email me directly</a> or learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn</a>!
+            Learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn</a>!
         </p>
     </div>
 </section>
