--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 
                 <!-- Project Card 3 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-    <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Sims" alt="Sims" class="w-full h-48 object-cover">
+    <img src="https://placehold.co/400x250/A78BFA/FFFFFF?text=Simulations" alt="Simulations" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">Software Simulations</h3>
         <p class="text-gray-700 mb-4">This project consisted of a series software simulations I created using Storyline 360. My voiceover describes the context, including how I customized Storyline's innate "sim" functionality for this project.</p>
@@ -142,7 +142,7 @@
 
                 <!-- Project Card 4 -->
 <div class="bg-white rounded-xl shadow-md overflow-hidden transform transition-transform duration-300 hover:scale-105 hover:shadow-xl">
-    <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=LMS" alt="LMS" class="w-full h-48 object-cover">
+    <img src="https://placehold.co/400x250/818CF8/FFFFFF?text=eLearning" alt="eLearning" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">eLearning/LMS Content</h3>
         <p class="text-gray-700 mb-4">An overview of several eLearning/LMS projects I published for a former employer, with an emphasis on multimedia creation. Content includes: training for Agile methodology, Office 365 and several applicaton-specific courses.</p>
