--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Video Editing</span>
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">eLearning</span>
         </div>
-        <a href="https://youtu.be/0KvbcqvpBXc" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+        <a href="https://youtu.be/0Bfie2_QM6Q" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
             View Project
             <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
         </a>
@@ -163,9 +163,15 @@
 <section id="contact" class="py-16 md:py-24 bg-white rounded-xl shadow-lg mx-auto my-12 max-w-4xl px-6">
     <div class="container mx-auto text-center">
         <h2 class="text-4xl font-bold text-gray-900 mb-8">Get In Touch!</h2>
-        <p class="text-lg text-gray-700 mb-4 max-w-2xl mx-auto">
-            I'm always open to new opportunities to learn and collaborate. Feel free to reach out!
+        
+        <p class="text-lg text-gray-700 mb-2 max-w-2xl mx-auto">
+            I'm always open to new opportunities to learn and collaborate. 
         </p>
+
+        <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
+            Feel free to reach out!
+        </p>
+
         <p class="text-lg text-gray-700 mb-8 max-w-2xl mx-auto">
             Learn more about me <a href="https://www.linkedin.com/in/justin-cavanaugh-132932120/" target="_blank" rel="noopener noreferrer" class="text-indigo-600 hover:text-indigo-800 font-semibold underline">on LinkedIn</a>!
         </p>
