--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <img src="https://placehold.co/400x250/3B82F6/FFFFFF?text=Analysis" alt="Forensic Analysis" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">Forensic Analysis & Hardware Reclamation</h3>
-        <p class="text-gray-700 mb-4">Re-purposed a legacy laptop to serve as a high-security "clean room" for forensic analysis of old flash drives.</p>
+        <p class="text-gray-700 mb-4">This section summarizes a project that included re-purposing a legacy laptop to serve as a high-security "clean room" for real-world forensic analysis and application of cybersecurity concepts.</p>
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Isolation</span>
             <span class="bg-green-100 text-green-800 text-sm font-medium px-3 py-1 rounded-full">Analysis</span>
@@ -184,13 +184,13 @@
     <img src="https://placehold.co/400x250/C4B5FD/FFFFFF?text=Digital Badges" alt="Digital Badges" class="w-full h-48 object-cover">
     <div class="p-6">
         <h3 class="text-2xl font-semibold text-gray-900 mb-3">LMS: Digital Badging</h3>
-        <p class="text-gray-700 mb-4">Re-launched the University of Nebraska's NU Advance LMS to feature a digital badging program and professional learning credentials.</p>
+        <p class="text-gray-700 mb-4">This video provides a narrated summary of the re-launch of the University of Nebraska's NU Advance LMS to feature a digital badging program and professional learning credentials.</p>
         <div class="flex flex-wrap gap-2 mb-4">
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Digital Badges</span>
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">Pathways</span>
             <span class="bg-purple-100 text-purple-800 text-sm font-medium px-3 py-1 rounded-full">LMS</span>
         </div>
-        <a href="https://youtu.be/0Bfie2_QM6Q" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
+        <a href="https://youtu.be/2C4H2UwVD2g" target="_blank" class="text-indigo-600 hover:text-indigo-800 font-semibold transition-colors duration-300 inline-flex items-center">
             View Project
             <svg class="ml-2 w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 8l4 4m0 0l-4 4m4-4H3"></path></svg>
         </a>
